<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_teal"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_teal"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="13dp"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="9dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_menu" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_shape1"
                    android:verticalScrollbarPosition="right">

                    <ImageView
                        android:id="@+id/ic_search"
                        android:layout_width="12dp"
                        android:layout_height="14dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_search" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_txtinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/ic_search"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/searchbar_hints"
                        android:paddingStart="13dp"
                        android:paddingTop="3dp"
                        android:textSize="13sp"
                        tools:ignore="RtlSymmetry" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_rounded_pg_bg" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="19dp"
            android:paddingTop="40dp"
            android:paddingEnd="19dp">

            <LinearLayout
                android:id="@+id/fb_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/yt_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25"
                tools:layout_editor_absoluteY="40dp">

                <RelativeLayout
                    android:id="@+id/fblogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="18dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/fb_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/facebook_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yt_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/twitter_btn"
                app:layout_constraintStart_toEndOf="@id/fb_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25">

                <RelativeLayout
                    android:id="@+id/ytlogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="12dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/yt_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/youtube_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/twitter_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/insta_btn"
                app:layout_constraintStart_toEndOf="@id/yt_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25"
                tools:layout_editor_absoluteY="40dp">

                <RelativeLayout
                    android:id="@+id/twtrlogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/twitter_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingTop="9dp"
                    android:text="@string/twitter_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/insta_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/twitter_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25">


                <RelativeLayout
                    android:id="@+id/instalogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/insta_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/instagram_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dribble_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fb_btn"
                app:layout_constraintEnd_toStartOf="@id/be_btn"
                app:layout_constraintWidth_percent="0.25"
                tools:layout_editor_absoluteY="40dp">


                <RelativeLayout
                    android:id="@+id/dribblelogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/dribble_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/dribble_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/be_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/dribble_btn"
                app:layout_constraintTop_toTopOf="@id/dribble_btn"
                app:layout_constraintEnd_toStartOf="@id/pin_btn"
                app:layout_constraintWidth_percent="0.25">

                <RelativeLayout
                    android:id="@+id/belogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="11dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/behance_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/behance_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pin_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/be_btn"
                app:layout_constraintTop_toTopOf="@id/dribble_btn"
                app:layout_constraintEnd_toStartOf="@id/wiki_btn"
                app:layout_constraintWidth_percent="0.25">

                <RelativeLayout
                    android:id="@+id/pinlogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/pinterest_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/pinterest_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wiki_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pin_btn"
                app:layout_constraintTop_toTopOf="@id/dribble_btn"
                app:layout_constraintWidth_percent="0.25">

                <RelativeLayout
                    android:id="@+id/wikilogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_circle_white">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/wikipedia_logo" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="9dp"
                    android:text="@string/wikipedia_name"
                    android:textColor="@color/text_color"
                    android:textSize="12.3sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>